Support an import with multi-id